    * at most 100 auth packets will be processed
	  per second to mitigate DDOS attacks
  * merge 'search' command into 'lookup' command
  * extend 'list' command to show most internal data structures
  * limit 'list' command output to stdout for security reasons
  * major code refactoring
  * less resource use due to more efficient logging
  * add --config to load a configuration file

 -- mwarning <moritzwarning@web.de>  Tue, 12 Nov 2013 02:31:57 +0100

kadnode (0.4) unstable; urgency=low

  * Use only one thread to save resources.
  * Change default DHT port to 6881
  * Add optional support for UPNP/NAT-PMP to add router forwardings
    for KadNode announcements where port > 1
  * Now kadctl allows to specify the time in minutes a value id is to be announced
  * Remove lookup_node, it is not really helpful but confusing
  * Fix broken node export on command line
  * Add --peerfile option to import/export peers
    for bootstrapping and to save good peers on shutdown
  * Decouple local multicast boostrapping from DHT and
    exit multicast group when it becomes too crowded
  * Add --disable-multicast
  * Fix argument quoting in Debian init script
  * Add list command to command line to list value ids that will be
    announced and to list port forwardings

 -- mwarning <moritzwarning@web.de>  Mon, 23 Sep 2013 21:41:24 +0200

kadnode (0.3) unstable; urgency=low

  * Only support IPv4 or IPv6, not both at the same time
  * Use value identifiers instead of node identifiers
  * Add option --value-id to announce multiple value identifiers
  * Fix and rewrite search for values
  * Change default multicast addresses to 239.192.202.7 / ff08:ca:07::
  * Change default interface ports: cmd: 1700, dns: 5353, web: 8053, nss: 4053

 -- mwarning <moritzwarning@web.de>  Thu, 27 Jun 2013 19:23:21 +0200

kadnode (0.2) unstable; urgency=high

  * kadnode-nss: positive result with corrupted memory
  * kadnode-ctl: timeout was too short