@@ -18,8 +18,8 @@
 #define ADDR_PARSE_CANNOT_RESOLVE 2
 #define ADDR_PARSE_NO_ADDR_FOUND 3
 
+int port_random( void );
 int port_parse( const char *pstr, int err );
-int port_chop( char *str, int def, int err );
 
 int bytes_random( UCHAR buffer[], size_t size );
 void bytes_from_hex( UCHAR bin[], const char hex[], size_t length );
